--- a/json/settings.json
+++ b/json/settings.json
@@ -3,7 +3,7 @@
 		"public": {
 			"char_limit": 8600000,
 			"name_limit": 500,
-			"godword": "DoYouKnowDaWae?",
+			"godword": "@Rafa2012",
 			"runlevel": {
 				"godmode": 0,
 				"youtube": 0,
