--- a/json/settings.json
+++ b/json/settings.json
@@ -285,7 +285,50 @@
 		"mike",
 		"mary",
 		"broken",
-		"espeak"
+		"espeak",
+		"voiceforge:Kidaroo<",
+						"voiceforge:Wiseguy",
+						"voiceforge:Jerkface",
+						"voiceforge:Damien",
+						"voiceforge:Kevin",
+						"voiceforge:Charlie",
+						"voiceforge:Kayla",
+						"voiceforge:Princess",
+						"voiceforge:RansomNote",
+						"voiceforge:Robot",
+						"voiceforge:TopHat",
+						"voiceforge:Evilgenius",
+						"voiceforge:Dog",
+						"voiceforge:David",
+						"voiceforge:French-fry",
+						"voiceforge:Designer",
+						"voiceforge:Obama",
+						"voiceforge:Conrad",
+						"voiceforge:Warren",
+						"voiceforge:Duchess",
+						"voiceforge:Linda",
+						"voiceforge:Millie",
+						"voiceforge:Diesel",
+						"voiceforge:Vixen",
+						"voiceforge:Vlad",
+						"voiceforge:William",
+						"voiceforge:Shygirl",
+						"voiceforge:JerseyGirl",
+						"voiceforge:Frank",
+						"voiceforge:Susan",
+						"voiceforge:Emily",
+						"voiceforge:Duncan",
+						"voiceforge:Gregory",
+						"voiceforge:Shouty",
+						"voiceforge:Dallas",
+						"voiceforge:Diane",
+						"voiceforge:Amy",
+						"voiceforge:Walter",
+						"voiceforge:Zach",
+						"voiceforge:Callie",
+						"voiceforge:Lawrence",
+						"voiceforge:Belle"
+		
 	],
 	"bonziColors": [ 
 		"bonzi",
